modify mailboxer mailer message, change subject

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,7 +23,7 @@ en:
   hello: "Hello world"
   mailboxer:
     message_mailer:
-      subject_new: "You have a new message: %{subject}"
-      subject_reply: "You have a new reply: %{subject}"
+      subject_new: "You have a new message from %{sender}"
+      subject_reply: "You have a new reply from %{sender}"
     notification_mailer:
       subject: "You have new notification: %{subject}"
